Fixing weird white space on right

--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ address {
 }
 
 .content-wrapper {
-  padding: 0 30px 0 30px;
+  margin: 0 30px 0 30px;
   width: 90%;
 
 }
@@ -233,7 +233,7 @@ header .header-divider {
 }
 
 header nav {
-  width: 99%;
+  width: 70%;
   display: flex;
   align-items: center;
   flex-flow: row wrap;
@@ -328,7 +328,6 @@ footer .copyright p {
 }
 
 #hero .content-wrapper{
-
 }
 
 
